--- a/package.json/package.json
+++ b/package.json/package.json
@@ -1,9 +1,10 @@
 {
   "name": "macro-tracker-app",
   "version": "1.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
